--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,5 @@
     href: https://guides.github.com/features/mastering-markdown/
   - text: YAML tutorial
     href: https://dev.to/paulasantamaria/introduction-to-yaml-125f
-- text: Test Page Hola
-  href: /hola
-- text: News
+- text: Noticias
   href: /news/
