--- a/_data/translations.yml
+++ b/_data/translations.yml
@@ -1,6 +1,6 @@
 relatedPosts:
+  es: "Noticias relacionadas"
   en: "Related Posts"
-  da: "Relaterede artikler"
 differentLanguage:
+  es: "Esta página está disponible en los siguientes idiomas"
   en: "This page is available in following languages"
-  da: "Læs på"
