--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,19 +2,27 @@
 
 - text: Acerca de
   href: /about
+  
 - text: Datos
   href: /data
-- text: Links
+  
+- text: Recursos
   menu: # Dropdown menu (one level deep only)
-  - text: Base theme demo
-    href: https://hp-base-theme.gbif-staging.org/
-  - text: "---" # Divider to separate blocks of menu items (at least 3 "-")
-  - text: "Documentación" # Title for block of menu items
-  - text: Estándares de datos
-    href: https://www.gbif.org/es/standards
-  - text: Markdown tutorial
-    href: https://guides.github.com/features/mastering-markdown/
-  - text: YAML tutorial
-    href: https://dev.to/paulasantamaria/introduction-to-yaml-125f
+  - text: ¿Por qué compartir datos de biodiversidad?
+  - href: /recursos/hola
+
+#- text: Links
+#  menu: # Dropdown menu (one level deep only)
+#  - text: Base theme demo
+#    href: https://hp-base-theme.gbif-staging.org/
+#  - text: "---" # Divider to separate blocks of menu items (at least 3 "-")
+#  - text: "Documentación" # Title for block of menu items
+#  - text: Estándares de datos
+#    href: https://www.gbif.org/es/standards
+#  - text: Markdown tutorial
+#    href: https://guides.github.com/features/mastering-markdown/
+#  - text: YAML tutorial
+#    href: https://dev.to/paulasantamaria/introduction-to-yaml-125f
+
 - text: Noticias
   href: /news/
