--- a/_data/en/navigation.yml
+++ b/_data/en/navigation.yml
@@ -1,20 +1,30 @@
 # Links listed below will be included in your site's navbar (navigation at the top)
 
 - text: About
-  href: /en/about
+  href: /about
+  
 - text: Data
-  href: /en/data
-- text: Links
+  href: /data
+  
+- text: Resources
   menu: # Dropdown menu (one level deep only)
-  - text: Base tema demo
-    href: https://hp-base-theme.gbif-staging.org/
-  - text: "---" # Divider to separate blocks of menu items (at least 3 "-")
-  - text: "Docs" # Title for block of menu items
-  - text: Jekyll dokumentation
-    href: https://jekyllrb.com/docs/pages/
-  - text: Lær Markdown
-    href: https://guides.github.com/features/mastering-markdown/
-  - text: Lær YAML
-    href: https://dev.to/paulasantamaria/introduction-to-yaml-125f
+  - text: Darwin Core Standard
+    href: /resources/estandar-darwin-core
+  - text: Template for data publishing
+    href: /resources/plantilla-para-publicacion-de-datos
+  - text: IPT Manual (Integrated Publishing Toolkit) 
+    href: /resources/manual-IPT
+  - text: Best practices for georeferencing
+    href: /resources/buenas-practicas-para-georreferenciacion
+  - text: Guide for georeferencing data
+    href: /resources/guia-para-georreferenciacion-de-datos
+  - text: Best practices for publication of sensitive data
+    href: /resources/buenas-practicas-para-publicacion-de-datos-sensibles
+  - text: Data Cleansing Guide
+    href: /resources/guia-para-la-limpieza-de-datos-open-refine
+ 
+- text: Barcoding
+  href: /about
+
 - text: News
-  href: /en/news/
+  href: /news/
