--- a/_data/en/footer.yml
+++ b/_data/en/footer.yml
@@ -3,32 +3,27 @@
 
 # Columns (the more you add, the narrower they will be)
 columns:
-  - name: Partnere
-    links:
-    - text: Navn på projektpartner
-      href: http://example.com
-    - text: Name of project partner 2
-      href: http://example.com
-
-  - name: Code
+  - name: GBIF Uruguay Node Members
     description: | # Can be Markdown
-      This project is open source. See `_data/footer.yml` to customize the footer.
+      [<img src="/assets/images/logoMA.png" alt="Logo Ministerio de Ambiente" style="width: 220px"/>](https://www.gub.uy/ministerio-ambiente)
+      [<img src="/assets/images/logoMNHN.png" alt="Logo Museo de Historia Natural" style="width: 220px"/>](https://www.mna.gub.uy/innovaportal/v/3811/14/mecweb/museo-nacional-de-historia-natural)
   
-  - name: Contact
-    description: | # Can be Markdown
-      Social icons links defined in `_config.yml`
-      * Street name
-      * 1234 postal code
-      * Country
-    connectIcons: true
+  - name: Links
+    links:
+    - text: FAQ
+      href: /faq/
 
-  # EXAMPLE
-  #- name: Group name
-  #  description: |
-  #    An optional description. Can be markdown
-  #  links: # optional as well
-  #  - text: link title
-  #    href: http://example.com
-  #  - text: link title 2
-  #    href: http://example2.com
-  #  connectIcons: true # optional - show social icons (defined in _config.yml)
+  - name: Contact
+    description: |
+      * Juncal 1385
+      * 2917 3380
+      * Uruguay
+      * SIBUy node administrator 
+    connectIcons: false
+
+# Small print license statement to add at the bottom of the footer. Can be Markdown
+# Will be prefixed by "© {{ site.author }}" if defined in _config.yml
+# Will be postfixed by "Powered by GBIF"
+# (Disabled by default, remove the '#' lines on the following two lines to enable.)
+#license: >
+#  Content on this site is licensed under an [Creative Commons Attribution 4.0 License](https://creativecommons.org/licenses/by/4.0/).
