Institution and ocurrence search
chances to enable institution listing and search

--- a/_data/en/navigation.yml
+++ b/_data/en/navigation.yml
@@ -4,7 +4,10 @@
   href: /about
   
 - text: Data
-  href: /data
+  href: /occurrence/search
+
+- text: Institutions
+  href: /institution/search
   
 - text: Resources
   menu: # Dropdown menu (one level deep only)
