--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -18,7 +18,7 @@ columns:
       * Juncal 1385
       * 2917 3380
       * Uruguay
-      * Administrador del nodo SIBUy 
+      * [Administrador del nodo SIBUy](mailto:biodiversidad@ambiente.gub.uy)
     connectIcons: false
 
 # Small print license statement to add at the bottom of the footer. Can be Markdown
