--- a/_config.yml
+++ b/_config.yml
@@ -40,9 +40,9 @@ remote_theme: gbif/jekyll-hp-base-theme
 # for usage in the standard privacy layout
 privacy:
   name: SIBUy
-  domain: your-domain.org
-  contactEmail: contact@your-domain.org
-  helpdeskEmail: helpdesk@your-domain.org
+  domain: ambiente.gub.uy
+  contactEmail: biodiversidad@ambiente.gub.uy
+  helpdeskEmail: biodiversidad@ambiente.gub.uy
 
 # The text for the terms can be changed by adding translations for 'terms', 'acceptTerms' and 'rejectTerms' in `/_data/translations.yml`.
 siteMeasurements:
