--- a/_data/en/footer.yml
+++ b/_data/en/footer.yml
@@ -18,7 +18,7 @@ columns:
       * Juncal 1385
       * 2917 3380
       * Uruguay
-      * SIBUy node administrator 
+      * [SIBUy node administrator](mailto:biodiversidad@ambiente.gub.uy)
     connectIcons: false
 
 # Small print license statement to add at the bottom of the footer. Can be Markdown
