--- a/_data/en/sections.yml
+++ b/_data/en/sections.yml
@@ -26,7 +26,7 @@ welcome:
     - text: Do you want to share your data?
       href: /faq/#cómo-puedo-convertirme-en-una-organización-publicador-de-datos
 checklist:
-  title: Checklistdee
+  title: Checklist
   description: |
     You will find the lists of species published by the National Directorate of Biodiversity and Ecosystem Services of the Ministry of Environment.
   features:
