--- a/_data/sections.yml
+++ b/_data/sections.yml
@@ -17,11 +17,11 @@ welcome:
   reverse: true
   title: ¡Bienvenidos y bienvenidas!
   description: |
-    Here you can find open information on Uruguay's biodiversity records contributed by members of the Uruguay node in GBIF and other data publishers.  
-    The data published through this portal are for public use.
+      Acá podrán encontrar información abierta de registros sobre la biodiversidad de Uruguay aportada por los miembros del nodo uruguayo en GBIF y otros publicadores de datos.  
+      Los datos publicados a través de este portal son de uso público.
   background: https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/Misto_%28Sicalis_luteola%29%2C_Uruguay%2C_2019.jpg/523px-Misto_%28Sicalis_luteola%29%2C_Uruguay%2C_2019.jpg
   imageLicense: |
-    CC BY 4.0 - <em>Sicalis luteola</em> (Misto). By Enrique González, Museo Nacional de Historia Natural de Uruguay. 2019. Via Wikimedia Commons.
+    CC BY 4.0 - <em>Sicalis luteola</em> (Misto). Por Enrique González, Museo Nacional de Historia Natural de Uruguay. 2019. Via Wikimedia Commons.
   cta: 
     - text: ¿Querés compartir tus datos?
       href: /faq/#cómo-puedo-convertirme-en-una-organización-publicador-de-datos
@@ -37,7 +37,11 @@ checklist:
       background: https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Amphisbaena_darwinii_Uruguay%2C_2020.jpg/640px-Amphisbaena_darwinii_Uruguay%2C_2020.jpg
       imageLicense: |
         CC BY SA 4.0 - <em>Amphisbaena darwinii</em> (Misto). Por Enrique González, Museo Nacional de Historia Natural de Uruguay. 2020. Via Wikimedia Commons.
-      href: https://www.gbif.org/dataset/1d68f3a2-6b42-437d-a0f7-e850d74e0e9f#description
+      href: https://www.gbif.org/dataset/1d68f3a2-6b42-437d-a0f7-e850d74e0e9f
+      cta:
+      - text: Explorá
+        href: https://www.gbif.org/dataset/1d68f3a2-6b42-437d-a0f7-e850d74e0e9f
+        isPrimary: true
     - preTitle: Anfibios
       title: Lista de Anfibios de Uruguay
       description: |
@@ -46,3 +50,7 @@ checklist:
       imageLicense: |
         CC BY 4.0 - <em>Rhinella schneideri</em> (Cururu). Por Enrique González, Museo Nacional de Historia Natural de Uruguay. 2019. Via Wikimedia Commons.
       href: https://www.gbif.org/dataset/e5ee77ad-627f-440f-a9b5-b87fb78e1aaa
+      cta:
+      - text: Explorá
+        href: https://www.gbif.org/dataset/e5ee77ad-627f-440f-a9b5-b87fb78e1aaa
+        isPrimary: true
