Update faq section.
Some typos in FAQ Spanish version, new translation for FAQ in English and footer link update

--- a/_data/en/footer.yml
+++ b/_data/en/footer.yml
@@ -11,7 +11,7 @@ columns:
   - name: Links
     links:
     - text: FAQ
-      href: /faq/
+      href: /en/faq/
 
   - name: Contact
     description: |
