--- a/_data/en/navigation.yml
+++ b/_data/en/navigation.yml
@@ -20,17 +20,17 @@
   - text: Darwin Core Standard
     href: /resources/estandar-darwin-core.md
   - text: Template for data publishing
-    href: /en/resources/plantilla-para-publicacion-de-datos
+    href: /en/resources/data-publishing.md
   - text: IPT Manual (Integrated Publishing Toolkit) 
     href: /en/resources/manual-IPT
   - text: Best practices for georeferencing
-    href: /en/resources/buenas-practicas-para-georreferenciacion
+    href: /en/resources/georeferencing-practices.md
   - text: Guide for georeferencing data
-    href: /en/resources/guia-para-georreferenciacion-de-datos
+    href: /en/resources/georeference-guide.md
   - text: Best practices for publication of sensitive data
-    href: /en/resources/buenas-practicas-para-publicacion-de-datos-sensibles
+    href: /en/resources/sensible-data.md
   - text: Data Cleansing Guide
-    href: /en/resources/guia-para-la-limpieza-de-datos-open-refine
+    href: /en/resources/open-refine.md
  
 - text: Barcoding
   href: /en/about
