--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,20 +18,20 @@
 - text: Recursos
   menu: # Dropdown menu (one level deep only)
   - text: Estándar Darwin Core
-    href: /resources/estandar-darwin-core
+    href: /resources/darwin-core.md
   - text: Plantilla para publicación de datos 
-    href: /resources/plantilla-para-publicacion-de-datos
+    href: /resources/data-publishing.md
   - text: Manual IPT (Kit de herramientas de publicación integrada) 
     href: /resources/manual-IPT
   - text: Buenas prácticas para georreferenciación 
-    href: /resources/buenas-practicas-para-georreferenciacion
+    href: /resources/georeferencing-practices.md
   - text: Guía para georreferenciación de datos
-    href: /resources/guia-para-georreferenciacion-de-datos
+    href: /resources/georeference-guide.md
   - text: Buenas prácticas para publicación de datos sensibles
-    href: /resources/buenas-practicas-para-publicacion-de-datos-sensibles
+    href: /resources/sensible-data.md
   - text: Guía para la limpieza de datos
-    href: /resources/guia-para-la-limpieza-de-datos-open-refine
- 
+    href: /resources/open-refine.md
+
 - text: Barcoding
   href: /about
 
