--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,9 +20,9 @@
   - text: Cómo publicar
     href: /resources/manual-IPT
   - text: Herramienta de publicación - IPT
-    href: https://cloud.gbif.org/uy/
+    href: https://cloud.gbif.org/uy/{:target="_blank"}
   - text: Registrarse como publicador
-    href: https://forms.gle/zibJmZEsJwbxuPok9
+    href: https://forms.gle/zibJmZEsJwbxuPok9{:target="_blank"}
 
   
 - text: Recursos
