--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -33,8 +33,8 @@
     href: /resources/data-publishing
   - text: Calidad de datos
     href: /resources/calidad-datos
-  - text: Datos de ADN
-    href: /resources/datos-adn
+  - text: Barcoding UY
+    href: /resources/barcoding-uy
 #  - text: Buenas prácticas para georreferenciación 
 #    href: /resources/georeferencing-practices
 #  - text: Guía para georreferenciación de datos
