--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -40,7 +40,7 @@
     href: /resources/data-publishing
   - text: Calidad de datos
     href: /resources/calidad-datos
-  - text: Barcoding UY
+  - text: Datos de ADN
     href: /resources/barcoding-uy
 #  - text: Buenas prácticas para georreferenciación 
 #    href: /resources/georeferencing-practices
